nats-micro/tests/ui/service_error_invalid_code_string.stderr
error: #[code(...)] requires an integer literal
 --> tests/ui/service_error_invalid_code_string.rs:5:5
  |
5 |     #[code("404")]
  |     ^^^^^^^^^^^^^^
